--- a/stm32/rosalyn-fc.ioc
+++ b/stm32/rosalyn-fc.ioc
@@ -5,10 +5,15 @@ ADC1.NbrOfConversionFlag=1
 ADC1.Rank-1\#ChannelRegularConversion=1
 ADC1.SamplingTime-1\#ChannelRegularConversion=ADC_SAMPLETIME_3CYCLES
 ADC1.master=1
+CORTEX_M7.ART_ACCLERATOR_ENABLE=1
+CORTEX_M7.CPU_DCache=Enabled
+CORTEX_M7.CPU_ICache=Enabled
+CORTEX_M7.IPParameters=ART_ACCLERATOR_ENABLE,PREFETCH_ENABLE,CPU_ICache,CPU_DCache
+CORTEX_M7.PREFETCH_ENABLE=1
 File.Version=6
 GPIO.groupedBy=Group By Peripherals
 I2C2.IPParameters=Timing
-I2C2.Timing=0x20303E5D
+I2C2.Timing=0x20404768
 KeepUserPlacement=false
 Mcu.Family=STM32F7
 Mcu.IP0=ADC1
@@ -273,34 +278,35 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true,9-MX_TIM11_Init-TIM11-false-HAL-true,10-MX_UART4_Init-UART4-false-HAL-true,11-MX_UART5_Init-UART5-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_SPI3_Init-SPI3-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_USART3_UART_Init-USART3-false-HAL-true,17-MX_I2C2_Init-I2C2-false-HAL-true,18-MX_TIM2_Init-TIM2-false-HAL-true,19-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
-RCC.AHBFreq_Value=96000000
-RCC.APB1CLKDivider=RCC_HCLK_DIV2
-RCC.APB1Freq_Value=48000000
-RCC.APB1TimFreq_Value=96000000
-RCC.APB2Freq_Value=96000000
-RCC.APB2TimFreq_Value=96000000
-RCC.CortexFreq_Value=96000000
-RCC.FCLKCortexFreq_Value=96000000
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true,9-MX_TIM11_Init-TIM11-false-HAL-true,10-MX_UART4_Init-UART4-false-HAL-true,11-MX_UART5_Init-UART5-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_SPI3_Init-SPI3-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_USART3_UART_Init-USART3-false-HAL-true,17-MX_I2C2_Init-I2C2-false-HAL-true,18-MX_TIM2_Init-TIM2-false-HAL-true,19-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,20-MX_USART6_UART_Init-USART6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+RCC.AHBFreq_Value=216000000
+RCC.APB1CLKDivider=RCC_HCLK_DIV4
+RCC.APB1Freq_Value=54000000
+RCC.APB1TimFreq_Value=108000000
+RCC.APB2CLKDivider=RCC_HCLK_DIV2
+RCC.APB2Freq_Value=108000000
+RCC.APB2TimFreq_Value=216000000
+RCC.CortexFreq_Value=216000000
+RCC.FCLKCortexFreq_Value=216000000
 RCC.FamilyName=M
-RCC.HCLKFreq_Value=96000000
+RCC.HCLKFreq_Value=216000000
 RCC.HSE_VALUE=8000000
 RCC.HSI_VALUE=16000000
-RCC.I2C1Freq_Value=48000000
-RCC.I2C2Freq_Value=48000000
-RCC.I2C3Freq_Value=48000000
+RCC.I2C1Freq_Value=54000000
+RCC.I2C2Freq_Value=54000000
+RCC.I2C3Freq_Value=54000000
 RCC.I2SFreq_Value=192000000
-RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
+RCC.IPParameters=AHBFreq_Value,APB1CLKDivider,APB1Freq_Value,APB1TimFreq_Value,APB2CLKDivider,APB2Freq_Value,APB2TimFreq_Value,CortexFreq_Value,FCLKCortexFreq_Value,FamilyName,HCLKFreq_Value,HSE_VALUE,HSI_VALUE,I2C1Freq_Value,I2C2Freq_Value,I2C3Freq_Value,I2SFreq_Value,LSE_VALUE,LSI_VALUE,MCO2PinFreq_Value,PLLCLKFreq_Value,PLLI2SQCLKFreq_Value,PLLI2SRCLKFreq_Value,PLLI2SRoutputFreq_Value,PLLM,PLLN,PLLQ,PLLQCLKFreq_Value,PLLQoutputFreq_Value,PLLSAIPCLKFreq_Value,PLLSAIQCLKFreq_Value,PLLSAIoutputFreq_Value,RNGFreq_Value,SAI1Freq_Value,SAI2Freq_Value,SDMMCFreq_Value,SYSCLKFreq_VALUE,SYSCLKSource,UART4Freq_Value,UART5Freq_Value,USART1Freq_Value,USART2Freq_Value,USART3Freq_Value,USART6Freq_Value,USBFreq_Value,VCOI2SOutputFreq_Value,VCOInputFreq_Value,VCOOutputFreq_Value,VCOSAIOutputFreq_Value
 RCC.LSE_VALUE=32768
 RCC.LSI_VALUE=32000
-RCC.MCO2PinFreq_Value=96000000
-RCC.PLLCLKFreq_Value=96000000
+RCC.MCO2PinFreq_Value=216000000
+RCC.PLLCLKFreq_Value=216000000
 RCC.PLLI2SQCLKFreq_Value=192000000
 RCC.PLLI2SRCLKFreq_Value=192000000
 RCC.PLLI2SRoutputFreq_Value=192000000
 RCC.PLLM=4
-RCC.PLLN=96
-RCC.PLLQ=4
+RCC.PLLN=216
+RCC.PLLQ=9
 RCC.PLLQCLKFreq_Value=48000000
 RCC.PLLQoutputFreq_Value=48000000
 RCC.PLLSAIPCLKFreq_Value=192000000
@@ -309,19 +315,19 @@ RCC.PLLSAIoutputFreq_Value=192000000
 RCC.RNGFreq_Value=48000000
 RCC.SAI1Freq_Value=192000000
 RCC.SAI2Freq_Value=192000000
-RCC.SDMMCFreq_Value=96000000
-RCC.SYSCLKFreq_VALUE=96000000
+RCC.SDMMCFreq_Value=216000000
+RCC.SYSCLKFreq_VALUE=216000000
 RCC.SYSCLKSource=RCC_SYSCLKSOURCE_PLLCLK
-RCC.UART4Freq_Value=48000000
-RCC.UART5Freq_Value=48000000
-RCC.USART1Freq_Value=96000000
-RCC.USART2Freq_Value=48000000
-RCC.USART3Freq_Value=48000000
-RCC.USART6Freq_Value=96000000
+RCC.UART4Freq_Value=54000000
+RCC.UART5Freq_Value=54000000
+RCC.USART1Freq_Value=108000000
+RCC.USART2Freq_Value=54000000
+RCC.USART3Freq_Value=54000000
+RCC.USART6Freq_Value=108000000
 RCC.USBFreq_Value=48000000
 RCC.VCOI2SOutputFreq_Value=384000000
 RCC.VCOInputFreq_Value=2000000
-RCC.VCOOutputFreq_Value=192000000
+RCC.VCOOutputFreq_Value=432000000
 RCC.VCOSAIOutputFreq_Value=384000000
 SH.ADCx_IN11.0=ADC1_IN11,IN11
 SH.ADCx_IN11.ConfNb=1
@@ -350,21 +356,21 @@ SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
 SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI1.CalculateBaudRate=6.0 MBits/s
+SPI1.CalculateBaudRate=6.75 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI1.Mode=SPI_MODE_MASTER
 SPI1.VirtualType=VM_MASTER
 SPI2.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI2.CalculateBaudRate=6.0 MBits/s
+SPI2.CalculateBaudRate=6.75 MBits/s
 SPI2.DataSize=SPI_DATASIZE_8BIT
 SPI2.Direction=SPI_DIRECTION_2LINES
 SPI2.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
 SPI2.Mode=SPI_MODE_MASTER
 SPI2.VirtualType=VM_MASTER
 SPI3.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_8
-SPI3.CalculateBaudRate=6.0 MBits/s
+SPI3.CalculateBaudRate=6.75 MBits/s
 SPI3.DataSize=SPI_DATASIZE_8BIT
 SPI3.Direction=SPI_DIRECTION_2LINES
 SPI3.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
