--- a/stm32/rosalyn-fc.ioc
+++ b/stm32/rosalyn-fc.ioc
@@ -134,12 +134,15 @@ PA2.Mode=Asynchronous
 PA2.Signal=USART2_TX
 PA3.Mode=Asynchronous
 PA3.Signal=USART2_RX
-PA4.GPIOParameters=GPIO_Label
+PA4.GPIOParameters=PinState,GPIO_Label
 PA4.GPIO_Label=GYRO1_NSS
 PA4.Locked=true
+PA4.PinState=GPIO_PIN_SET
 PA4.Signal=GPIO_Output
 PA5.Mode=Full_Duplex_Master
 PA5.Signal=SPI1_SCK
+PA6.GPIOParameters=GPIO_PuPd
+PA6.GPIO_PuPd=GPIO_PULLUP
 PA6.Mode=Full_Duplex_Master
 PA6.Signal=SPI1_MISO
 PA7.Mode=Full_Duplex_Master
@@ -162,25 +165,31 @@ PB10.Mode=I2C
 PB10.Signal=I2C2_SCL
 PB11.Mode=I2C
 PB11.Signal=I2C2_SDA
-PB12.GPIOParameters=GPIO_Label
+PB12.GPIOParameters=PinState,GPIO_Label
 PB12.GPIO_Label=SPI2_NSS
 PB12.Locked=true
+PB12.PinState=GPIO_PIN_SET
 PB12.Signal=GPIO_Output
 PB13.Mode=Full_Duplex_Master
 PB13.Signal=SPI2_SCK
+PB14.GPIOParameters=GPIO_PuPd
+PB14.GPIO_PuPd=GPIO_PULLUP
 PB14.Locked=true
 PB14.Mode=Full_Duplex_Master
 PB14.Signal=SPI2_MISO
 PB15.Locked=true
 PB15.Mode=Full_Duplex_Master
 PB15.Signal=SPI2_MOSI
-PB2.GPIOParameters=GPIO_Label
+PB2.GPIOParameters=PinState,GPIO_Label
 PB2.GPIO_Label=LED0
 PB2.Locked=true
+PB2.PinState=GPIO_PIN_SET
 PB2.Signal=GPIO_Output
 PB3.Locked=true
 PB3.Mode=Full_Duplex_Master
 PB3.Signal=SPI3_SCK
+PB4.GPIOParameters=GPIO_PuPd
+PB4.GPIO_PuPd=GPIO_PULLUP
 PB4.Locked=true
 PB4.Mode=Full_Duplex_Master
 PB4.Signal=SPI3_MISO
@@ -213,9 +222,10 @@ PC13.GPIOParameters=GPIO_Label
 PC13.GPIO_Label=BEEPER
 PC13.Locked=true
 PC13.Signal=GPIO_Output
-PC15-OSC32_OUT.GPIOParameters=GPIO_Label
+PC15-OSC32_OUT.GPIOParameters=PinState,GPIO_Label
 PC15-OSC32_OUT.GPIO_Label=BARO_NSS
 PC15-OSC32_OUT.Locked=true
+PC15-OSC32_OUT.PinState=GPIO_PIN_SET
 PC15-OSC32_OUT.Signal=GPIO_Output
 PC2.GPIOParameters=GPIO_Label
 PC2.GPIO_Label=CURRENT_ADC
@@ -236,9 +246,10 @@ PC7.GPIOParameters=GPIO_Label
 PC7.GPIO_Label=M2
 PC7.Locked=true
 PC7.Signal=S_TIM8_CH2
-PC8.GPIOParameters=GPIO_Label
+PC8.GPIOParameters=PinState,GPIO_Label
 PC8.GPIO_Label=FLASH_CS
 PC8.Locked=true
+PC8.PinState=GPIO_PIN_SET
 PC8.Signal=GPIO_Output
 PC9.GPIOParameters=GPIO_Label
 PC9.GPIO_Label=M1
@@ -278,7 +289,7 @@ ProjectManager.StackSize=0x400
 ProjectManager.TargetToolchain=STM32CubeIDE
 ProjectManager.ToolChainLocation=
 ProjectManager.UnderRoot=true
-ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-HAL-true,2-SystemClock_Config-RCC-false-HAL-false,3-MX_SPI1_Init-SPI1-false-HAL-true,4-MX_SPI2_Init-SPI2-false-HAL-true,5-MX_TIM1_Init-TIM1-false-HAL-true,6-MX_TIM3_Init-TIM3-false-HAL-true,7-MX_TIM4_Init-TIM4-false-HAL-true,8-MX_TIM8_Init-TIM8-false-HAL-true,9-MX_TIM11_Init-TIM11-false-HAL-true,10-MX_UART4_Init-UART4-false-HAL-true,11-MX_UART5_Init-UART5-false-HAL-true,12-MX_USART1_UART_Init-USART1-false-HAL-true,13-MX_ADC1_Init-ADC1-false-HAL-true,14-MX_SPI3_Init-SPI3-false-HAL-true,15-MX_USART2_UART_Init-USART2-false-HAL-true,16-MX_USART3_UART_Init-USART3-false-HAL-true,17-MX_I2C2_Init-I2C2-false-HAL-true,18-MX_TIM2_Init-TIM2-false-HAL-true,19-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,20-MX_USART6_UART_Init-USART6-false-HAL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-HAL-true
+ProjectManager.functionlistsort=1-MX_GPIO_Init-GPIO-false-LL-true,2-SystemClock_Config-RCC-false-LL-false,3-MX_SPI1_Init-SPI1-false-LL-true,4-MX_SPI2_Init-SPI2-false-LL-true,5-MX_TIM1_Init-TIM1-false-LL-true,6-MX_TIM3_Init-TIM3-false-LL-true,7-MX_TIM4_Init-TIM4-false-LL-true,8-MX_TIM8_Init-TIM8-false-LL-true,9-MX_TIM11_Init-TIM11-false-LL-true,10-MX_UART4_Init-UART4-false-LL-true,11-MX_UART5_Init-UART5-false-LL-true,12-MX_USART1_UART_Init-USART1-false-LL-true,13-MX_ADC1_Init-ADC1-false-LL-true,14-MX_SPI3_Init-SPI3-false-LL-true,15-MX_USART2_UART_Init-USART2-false-LL-true,16-MX_USART3_UART_Init-USART3-false-LL-true,17-MX_I2C2_Init-I2C2-false-LL-true,18-MX_TIM2_Init-TIM2-false-LL-true,19-MX_USB_DEVICE_Init-USB_DEVICE-false-HAL-false,20-MX_USART6_UART_Init-USART6-false-LL-true,0-MX_CORTEX_M7_Init-CORTEX_M7-false-LL-true
 RCC.AHBFreq_Value=216000000
 RCC.APB1CLKDivider=RCC_HCLK_DIV4
 RCC.APB1Freq_Value=54000000
@@ -355,8 +366,8 @@ SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
-SPI1.CalculateBaudRate=6.75 MBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
+SPI1.CalculateBaudRate=843.75 KBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
