bmp280 is working

--- a/stm32/rosalyn-fc.ioc
+++ b/stm32/rosalyn-fc.ioc
@@ -366,8 +366,8 @@ SH.S_TIM8_CH2.0=TIM8_CH2,PWM Generation2 CH2
 SH.S_TIM8_CH2.ConfNb=1
 SH.S_TIM8_CH4.0=TIM8_CH4,PWM Generation4 CH4
 SH.S_TIM8_CH4.ConfNb=1
-SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_128
-SPI1.CalculateBaudRate=843.75 KBits/s
+SPI1.BaudRatePrescaler=SPI_BAUDRATEPRESCALER_16
+SPI1.CalculateBaudRate=6.75 MBits/s
 SPI1.DataSize=SPI_DATASIZE_8BIT
 SPI1.Direction=SPI_DIRECTION_2LINES
 SPI1.IPParameters=VirtualType,Mode,Direction,CalculateBaudRate,DataSize,BaudRatePrescaler
